Fix modal overlay layout in all cases
Add .minh-100vh class to the ER container so it stretches the full viewport height even on the hospital tab.  Without that, the overlay contents get clipped on the bottom.
Switch Header back to position: sticky.
Switch UnconfirmedRingdowns back to position: absolute and make it 100vh high, so it doesn't stick to the bottom of the content.

--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -11,10 +11,6 @@
   box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.1);
 }
 
-html.no-scrolling .header {
-  position: fixed;
-}
-
 .header__logo {
   height: units(2);
   user-select: none;
